--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,7 +47,9 @@ jobs:
         run: >
           ssh -t deploy '
           npm run stop-${{ needs.Prepare.outputs.env }} --prefix ${{ needs.Prepare.outputs.env }} || :
+          && cp -v ${{ needs.Prepare.outputs.env }}/data/ ${{ needs.Prepare.outputs.env }}_data/
           && ln -sf ./${{ env.sha }} ./${{ needs.Prepare.outputs.env }}
+          && cp -v ${{ needs.Prepare.outputs.env }}_data/ ${{ needs.Prepare.outputs.env }}/data/
           && npm run start-${{ needs.Prepare.outputs.env }}  --prefix ${{ needs.Prepare.outputs.env }}
           '
   Cleanup:
