--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,7 +48,7 @@ jobs:
           ssh -t deploy '
           npm run stop-${{ needs.Prepare.outputs.env }} --prefix ${{ needs.Prepare.outputs.env }} || :
           && cp -v ${{ needs.Prepare.outputs.env }}/data/* data/*
-          && ln -svf ./${{ env.sha }} ./${{ needs.Prepare.outputs.env }}
+          && ln -svf ./${{ env.sha }} {{ needs.Prepare.outputs.env }}
           && cp -v data/* ${{ needs.Prepare.outputs.env }}/data/*
           && npm run start-${{ needs.Prepare.outputs.env }}  --prefix ${{ needs.Prepare.outputs.env }}
           '
