ignore missing data

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,7 +47,7 @@ jobs:
         run: >
           ssh -t deploy '
           npm run stop-${{ needs.Prepare.outputs.env }} --prefix ${{ needs.Prepare.outputs.env }} || :
-          && cp -v ${{ needs.Prepare.outputs.env }}/data/* data/*
+          && cp -v ${{ needs.Prepare.outputs.env }}/data/* data/* || :
           && ln -svfT ${{ env.sha }} ${{ needs.Prepare.outputs.env }}
           && cp -v data/* ${{ needs.Prepare.outputs.env }}/data/*
           && npm run start-${{ needs.Prepare.outputs.env }}  --prefix ${{ needs.Prepare.outputs.env }}
