--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,9 +47,9 @@ jobs:
         run: >
           ssh -t deploy '
           npm run stop-${{ needs.Prepare.outputs.env }} --prefix ${{ needs.Prepare.outputs.env }} || :
-          && cp -rv ${{ needs.Prepare.outputs.env }}/data . || :
+          && cp -v ${{ needs.Prepare.outputs.env }}/data/tarkovData.sqlite data/tarkovData.sqlite || :
           && ln -svfT ${{ env.sha }} ${{ needs.Prepare.outputs.env }}
-          && cp -rv data ${{ needs.Prepare.outputs.env }}/
+          && cp -v data/tarkovData.sqlite ${{ needs.Prepare.outputs.env }}/data/tarkovData.sqlite
           && npm run start-${{ needs.Prepare.outputs.env }}  --prefix ${{ needs.Prepare.outputs.env }}
           '
   Cleanup:
