working discord connection

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "scripts": {
     "start": "wrangler dev",
     "deploy": "wrangler publish"
+  },
+  "dependencies": {
+    "buffer": "^6.0.3",
+    "tweetnacl": "^1.0.3"
   }
 }
