--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "memeho",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "devDependencies": {
     "wrangler": "2.5.0"
   },
   "private": true,
   "scripts": {
     "start": "wrangler dev",
-    "deploy": "wrangler publish"
+    "deploy": "wrangler publish",
+    "register": "node src/register.js"
   },
   "dependencies": {
     "discord-interactions": "^3.2.0"
