--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -17,8 +17,8 @@ jobs:
         run: npm run register
         env:
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
-          DISCORD_CLIENT_ID: 336671031840473093
-          DISCORD_GUILD_ID: 513185519702900779
+          DISCORD_CLIENT_ID: "336671031840473093"
+          DISCORD_GUILD_ID: "513185519702900779"
       # - name: Publish
       #   uses: cloudflare/wrangler-action@2.0.0
       #   with:
