--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "register": "node src/register.js"
   },
   "dependencies": {
-    "discord-interactions": "^3.2.0"
+    "discord-interactions": "^3.2.0",
+    "js-yaml": "^4.1.0"
   }
 }
