--- a/package.json
+++ b/package.json
@@ -1,32 +1,17 @@
 {
   "name": "memeho",
-  "version": "1.0.0",
-  "engines": {
-    "node": ">=16.14.2"
-  },
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "start-dev": "pm2 start --name memeho-dev index.js",
-    "stop-dev": "pm2 delete memeho-dev || :",
-    "start-prod": "pm2 start --name memeho index.js",
-    "stop-prod": "pm2 delete memeho || :",
-    "lint": "eslint . --ext .js"
-  },
-  "keywords": [],
-  "author": "Justin Ho<jho.main.go@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@discordjs/rest": "^0.4.1",
-    "discord-api-types": "^0.31.2",
-    "discord.js": "^13.6.0",
-    "js-yaml": "^4.1.0",
-    "pm2": "^5.2.0",
-    "sequelize": "^6.19.0",
-    "sqlite3": "^5.0.6"
-  },
+  "version": "2.0.0",
   "devDependencies": {
-    "eslint": "^8.17.0"
+    "wrangler": "2.5.0"
+  },
+  "private": true,
+  "scripts": {
+    "start": "wrangler dev",
+    "deploy": "wrangler publish",
+    "register": "node src/register.js"
+  },
+  "dependencies": {
+    "discord-interactions": "^3.2.0",
+    "js-yaml": "^4.1.0"
   }
 }
