--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,13 +1,13 @@
-name: Serverless Pipeline
-on:
-  - push
-  - workflow_dispatch
+name: dev pipeline
+on: pull_request
+
 jobs:
-  Pipeline:
+  deploy-dev:
     runs-on: ubuntu-latest
+    environment: dev
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
@@ -23,4 +23,4 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CLOUDFLARE_TOKEN }}
-          command: publish
+          command: publish --env dev
