--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -1,13 +1,16 @@
-name: Serverless Pipeline
+name: prod pipeline
 on:
-  - push
-  - workflow_dispatch
+  push:
+    branches: [main]
+  workflow_dispatch:
+
 jobs:
-  Pipeline:
+  deploy-prod:
     runs-on: ubuntu-latest
+    environment: prod
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
@@ -23,4 +26,4 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CLOUDFLARE_TOKEN }}
-          command: publish
+          command: publish --env prod
