--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,9 @@
 name: Serverless Pipeline
 on:
-  - push
-  - workflow_dispatch
+  workflow_dispatch:
+  push:
+    branches: main
+
 jobs:
   Pipeline:
     runs-on: ubuntu-latest
@@ -23,4 +25,4 @@ jobs:
         uses: cloudflare/wrangler-action@da0e0dfe58b7a431659754fdf3f186c529afbe65 #3.14.1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_TOKEN }}
-          command: publish
+          command: deploy
